Corrected Logos z-index

--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -54,4 +54,4 @@ a.button
   display: block
   margin: 0 auto
   position: relative
-  z-index: 500
+  z-index: 5
